<resources>
    <string name="app_name">CoinWise</string>
    <string name="tokens">Tokens</string>
    <string name="sort">Sort</string>
    <string name="no_results_found">   No Results Found   </string>
    <string name="coin_symbol">COIN SYMBOL</string>
    <string name="coin_name">COIN NAME</string>
    <string name="search">Search</string>
    <string name="total_investment">Total Investment:</string>
    <string name="dollar_warning">Enter amount in "USD"</string>
    <string name="save">SAVE</string>
    <string name="total_token_held">Total Token Held:</string>
    <string name="update_investment">Update Investment</string>
    <string name="profit_loss_percentage">Profit / Loss Percentage:</string>
    <string name="profit_loss_amount">Profit / Loss Amount:</string>
    <string name="current_investment_value">Current Investment Value:</string>
    <string name="total_investment_detail">Total Investment:</string>
    <string name="total_token_held_detail">Total Token Held:</string>
    <string name="investment_details">Investment Details</string>
    <string name="image_description">Image</string>
    <string name="total_balance">Total Balance</string>
    <string name="data_loading">Data Loading…</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="investment_diversity">Investment Diversity</string>
    <string name="investment_insights">Investment Insights</string>
    <string name="investment_details_text">Investment Details</string>
    <string name="initial_investment">Initial Investment:</string>
    <string name="most_loss_percentage">Most Loss Percentage:</string>
    <string name="most_loss">Most Loss:</string>
    <string name="most_profit_percentage">Most Profit Percentage:</string>
    <string name="most_profit">Most Profit:</string>
    <string name="investment_return_percentage">Investment Return Percentage:</string>
    <string name="investment_profit_loss">Investment Profit/Loss:</string>
    <string name="investment_current_value">Investment Current Value:</string>
    <string name="empty_wallet_please_add_coin_n_click_search_button_below">Empty wallet, please add coin. \n Click to \Search\ button below.</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="action_settings_text">Settings</string>
    <string name="information">Information</string>
    <string name="about_app">About App</string>
    <string name="support">Support</string>
    <string name="native_currency">Native Currency</string>
    <string name="support_icon">SupportIcon</string>
    <string name="about_app_icon">AboutUsIcon</string>
    <string name="empty_portfolio">  Empty Portfolio  </string>
    <string name="coin_name_examples">Coin name examples: bitcoin, ethereum, polkadot etc.</string>
    <string name="search_coin_by_name">Search Coin by Name</string>
    <string name="coin_symbol_examples">Symbol examples: BTC, ETH, DOT etc. \nSome coins have - in their symbol, example: floki-inu</string>
    <string name="note">Note:</string>
    <string name="note_explanation">*Lowercase or uppercase letters are not important. \n*Search only 1 coin name/symbol at a time. \n*If searched coin has more than 10 decimals, It\'s price might not be supported in this app.</string>
    <string name="btn_close_search_coin">Close</string>
    <string name="how_to_add_coins">How to Add Coins?</string>
    <string name="search_coin_by_name_title">Search Coin by Name</string>
    <string name="about_app_string1">This is a non-profit, user friendly investment tracking app. Users can enter their investments and keep the track of their up to date value.</string>
    <string name="about_app_string2">You don\'t need to and also you can not connect your WEB-3 wallet to this app (MetaMask, TrustWallet etc). This app is not a WEB-3 wallet. It does not contains your cryptocurrencies or NFTs.</string>
    <string name="about_app_string3">This app does not store your private data. Everything you enter to this app is stored only in your phone.</string>
    <string name="preference_file_key">"coinWiseSharedPrefs_"</string>
    <string name="currency">Balance Currency</string>
</resources>