<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color_dark_theme"
    tools:context=".presentation.SearchCoinFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarSearchCoinFragment"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:padding="10dp">

        <EditText
            android:id="@+id/etSearchCoin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:ems="10"
            android:hint="@string/search"
            android:textColorHint="@color/search_text_color_hint"
            app:hintTextColor="@color/search_text_color_hint"
            android:autofillHints="Search a coin"
            android:background="@drawable/rounded_edittext"
            android:inputType="textPersonName"
            app:drawableLeftCompat="@drawable/ic_search_24"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            >
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/searchCoinBtnSlug"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coin_name"
                android:background="@drawable/rounded_button"
                android:gravity="center"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/searchCoinBtnSymbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coin_symbol"
                android:background="@drawable/rounded_button"
                android:gravity="center"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:background="@color/divider_color" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCoinSearchResults"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/tvNoResults"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/no_results_found"
            android:textSize="18sp"
            android:textColor="@color/tv_no_results_color"
            android:layout_gravity="center_horizontal"
            app:drawableStartCompat="@drawable/ic_clear_24"
            app:drawableEndCompat="@drawable/ic_clear_24"
            android:gravity="center_horizontal"
            android:visibility="gone"
            tools:visibility="visible"
            />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>